@@ -68,7 +68,7 @@ void start_built_in_module(const char* name,
 
 int load_module(char* module);
 int is_module_loaded(const char* name);
-void module_loaded(const char* name, const char* author, const char* description, UInt32 version, UInt32 compat);
+void module_loaded(const char* name, void* start, const char* author, const char* description, UInt32 version, UInt32 compat);
 
 
 
